--- a/css/main.css
+++ b/css/main.css
@@ -15,5 +15,17 @@ ul nav {
 }
 
 .wrapper {
-  background-color: #eee8d5
+  background-color: #eee8d5;
+}
+
+contents, favs, facts, types {
+  color: #93a1a1;
+}
+
+.wrapper > .dfn {
+  background-color: #b58900;
+}
+
+.dfn + strong {
+  color: #fff;
 }
